Refactor project stucture

--- a/Exercise1/earbuds.html
+++ b/Exercise1/earbuds.html
@@ -15,7 +15,7 @@
             <li>
                 <h2>Samsung Galaxy Buds Pro</h2>
                 <a href="galaxy-buds-pro.html">
-                <img src="images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
+                <img src="../images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
                 </a>    
                 <p>371899</p>
                 <p>Review:4.2/5</p>
@@ -30,7 +30,7 @@
 
             <li>
                 <h2>Apple AirPods Pro (2nd generation)</h2>
-                <img src="images/AirPods.png" alt="AirPods Pro2" width="200" height="200">
+                <img src="../images/AirPods.png" alt="AirPods Pro2" width="200" height="200">
                 <p>90857</p>
                 <p>Review:3.8/5</p>
                 <p>Price: <s>€299.00</s> <b>€249.00</b></p>
@@ -43,7 +43,7 @@
 
             <li>
                 <h2>Xiaomi Earbuds 3 Pro</h2>
-                <img src="images/xiaomi_buds.jpeg" alt="Xiaomi Earbuds 3 Pro" width="200" height="200">
+                <img src="../images/xiaomi_buds.jpeg" alt="Xiaomi Earbuds 3 Pro" width="200" height="200">
                 <p>200837</p>
                 <p>Review:4.7/5</p>
                 <p><b> €45.00</b></p>
