--- a/Exercise1/galaxy-buds-pro.html
+++ b/Exercise1/galaxy-buds-pro.html
@@ -12,7 +12,7 @@
     <body>
         <p><a href="index.html">Home</a></p>
         <h1>Samsung Galaxy Buds Pro</h1>
-        <img src="images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="400" height="400">
+        <img src="../images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="400" height="400">
         <h2>Price: €119.00</h2>
         <h3>Product Code: 371899</h3>
         <a href="earbuds.html">More products like this</a>
@@ -24,15 +24,15 @@
         <h3>More Information</h3>
         <div id="banner">
             <div class="inline-block">
-                <img src ="images/buds_pro.png" alt="Buds Pro Image" width="300" height="200">
+                <img src ="../images/buds_pro.png" alt="Buds Pro Image" width="300" height="200">
             </div>
         
             <div class="inline-block">
-                <img src ="images/buds_pro2.png" alt="Buds Pro Image" width="300" height="200">
+                <img src ="../images/buds_pro2.png" alt="Buds Pro Image" width="300" height="200">
             </div>
         
             <div class="inline-block">
-                <img src ="images/buds_pro3.jpg" alt="Buds Pro Image" width="300" height="200">
+                <img src ="../images/buds_pro3.jpg" alt="Buds Pro Image" width="300" height="200">
             </div>
         </div>
         <p>Mostly, a frequency response like this means 
