--- a/Exercise1/product-categories.html
+++ b/Exercise1/product-categories.html
@@ -13,7 +13,7 @@
         <p><a href="index.html">Home</a></p>
         <div class="Smartphones & Tablets">
             <h2>Smartphones & Tablets</h2>
-            <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
+            <img src="../images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
             <nav id="Smartphones-Tablets">
                 <ul>
                     <li><a href="smartphones.html">Smartphones</a></li>
@@ -27,7 +27,7 @@
 
         <div class="PCs and Peripherals">
             <h2>PCs & Peripherals</h2>
-            <img src="images/pc.png" alt="PCs and Peripherals" width="150" height="100">
+            <img src="../images/pc.png" alt="PCs and Peripherals" width="150" height="100">
             <nav id="PCs-Peripherals">
                 <ul>
                     <li>PCs</li>
@@ -41,7 +41,7 @@
 
         <div class="Imaging">
             <h2>Imaging</h2>
-            <img src="images/prof.jpg" alt="Imaging" width="150" height="100"> 
+            <img src="../images/imaging.jpg" alt="Imaging" width="150" height="100"> 
             <nav id="Imaging">
                 <ul>
                     <li>Drones</li>
@@ -55,7 +55,7 @@
 
         <div class="TVs">
             <h2>Image & Sound</h2>
-            <img src="images/tv.jpeg" alt="TVs" width="150" height="100">
+            <img src="../images/tv.jpeg" alt="TVs" width="150" height="100">
             <nav id="TVs">
                 <ul>
                     <li>TVs</li>
@@ -68,7 +68,7 @@
 
         <div class="Home Devices">
             <h2>Home Devices</h2>
-            <img src="images/home.png" alt="Home Devices" width="150" height="100">
+            <img src="../images/home.png" alt="Home Devices" width="150" height="100">
             <nav id="Home-Devices">
                 <ul>
                     <li>Air Conditions</li>
