--- a/Exercise1/s22-ultra.html
+++ b/Exercise1/s22-ultra.html
@@ -12,7 +12,7 @@
     <body>
         <p><a href="index.html">Home</a></p>
         <h1>Samsung Galaxy S22 Ultra 128 GB</h1>
-        <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="400" height="400">
+        <img src="../images/s22_ultra.jpeg" alt="S22 Ultra" width="400" height="400">
         <h2>Price: <s>€1,299.00</s> <b>€1,199.00</b></h2>
         <h3>Product Code: 256458</h3>
         <h4><a href="#reviews">Total Rating: 4.6/5</a></h4>
@@ -44,7 +44,7 @@
                     Our brightest screen.</b></pre>
                 <p>Take your must-see content to the next level on our brightest, smoothest adaptive
                      120Hz display with Vision Booster to optimize brightness and color contrast.</p>
-                <img src="images/s22-ultra-wallpaper.png" alt="s22 ultra wallpaper" width="500" height="300">
+                <img src="../images/s22-ultra-wallpaper.png" alt="s22 ultra wallpaper" width="500" height="300">
             </article>
             <hr>
             <article class="component_information">
@@ -56,7 +56,7 @@
                 <p>AI brilliance brings light to dark photos on both the 108MP Wide-angle Camera and 
                     the 40MP Selfie Camera. Super Night Solution intelligently brightens up the scene 
                     so you can use the night to style your Portrait mode shots without losing details.</p>
-                <img src="images/s22-ultra-nightography.jpg" alt="s22 ultra Nightography" width="500" height="300">
+                <img src="../images/s22-ultra-nightography.jpg" alt="s22 ultra Nightography" width="500" height="300">
             </article>
             <hr>
             <article class="component_information">
@@ -67,7 +67,7 @@
                     built-in S Pen</b></pre>
                 <p>The iconic S Pen fits right into S for the first time. Eject it from the bottom to take 
                     notes, sketch, edit content with precision or control your phone.</p>
-                <img src="images/s22-ultra-spen.jpg" alt="s22 ultra s pen" width="500" height="300">
+                <img src="../images/s22-ultra-spen.jpg" alt="s22 ultra s pen" width="500" height="300">
             </article>
             <hr>
             <article class="component_information">
@@ -78,7 +78,7 @@
                     night</b></pre>
                 <p>Work, play and do your thing from one day into the next with a massive 5000mAh
                      (typical) battery that intelligently saves power for when you need it most.</p>
-                <img src="images/s22-ultra-battery.jpg" alt="s22 ultra battery" width="500" height="300">
+                <img src="../images/s22-ultra-battery.jpg" alt="s22 ultra battery" width="500" height="300">
             </article>
             <hr>
         </section>
