--- a/Exercise1/smartphones.html
+++ b/Exercise1/smartphones.html
@@ -15,7 +15,7 @@
             <li>
                 <h2>Samsung Galaxy S22 Ultra 128 GB</h2>
                 <a href="s22-ultra.html">
-                <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
+                <img src="../images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
                 </a>
                 <p>256458</p>
                 <p>Review:4.6/5</p>
@@ -28,7 +28,7 @@
 
             <li>
                 <h2>Samsung Galaxy Z Fold4 256 GB</h2>
-                <img src="images/z-fold-4.jpeg" alt="Z Fold 4" width="200" height="200">
+                <img src="../images/z-fold-4.jpeg" alt="Z Fold 4" width="200" height="200">
                 <p>256458</p>
                 <p>Review:4.9/5</p>
                 <p>Price: <s>€1,899.00</s> <b>€1,749.00</b></p>
@@ -39,7 +39,7 @@
 
             <li>
                 <h2>Samsung Galaxy Z Flip4 128 GB</h2>
-                <img src="images/flip4.png" alt="Z Flip 4" width="200" height="200">
+                <img src="../images/flip4.png" alt="Z Flip 4" width="200" height="200">
                 <p>298742</p>
                 <p>Review:4.4/5</p>
                 <p>Price: <s>€1,149.00</s> <b>€1,049.00</b></p>
@@ -52,7 +52,7 @@
 
             <li>
                 <h2>Apple iPhone 14 Pro 128 GB</h2>
-                <img src="images/14_pro.jpeg" alt="iPhone 14 Pro" width="200" height="200">
+                <img src="../images/14_pro.jpeg" alt="iPhone 14 Pro" width="200" height="200">
                 <p>598741</p>
                 <p>Review:4.9/5</p>
                 <p><b>Price: €1,399.00</b></p>
@@ -64,7 +64,7 @@
 
             <li>
                 <h2>Xiaomi 12 Pro 128 GB</h2>
-                <img src="images/xiaomi_12_pro.jpeg" alt="xiaomi 12 Pro" width="200" height="200">
+                <img src="../images/xiaomi_12_pro.jpeg" alt="xiaomi 12 Pro" width="200" height="200">
                 <p>178945</p>
                 <p>Review:4.5/5</p>
                 <p><b>Price: €1,099.00</b></p>
