--- a/Exercise2/html/earbuds.html
+++ b/Exercise2/html/earbuds.html
@@ -24,7 +24,7 @@
                 <li>
                     <h2>Samsung Galaxy Buds Pro</h2>
                     <a href="galaxy-buds-pro.html">
-                    <img src="images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
+                    <img src="../../images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
                     </a>    
                     <p>371899</p>
                     <p>Rating:
@@ -45,7 +45,7 @@
 
                 <li>
                     <h2>Apple AirPods Pro (2nd generation)</h2>
-                    <img src="images/AirPods.png" alt="AirPods Pro2" width="200" height="200">
+                    <img src="../../images/AirPods.png" alt="AirPods Pro2" width="200" height="200">
                     <p>90857</p>
                     <p>Rating:
                         <span class="fa fa-star checked"></span>
@@ -63,7 +63,7 @@
 
                 <li>
                     <h2>Xiaomi Earbuds 3 Pro</h2>
-                    <img src="images/xiaomi_buds.jpeg" alt="Xiaomi Earbuds 3 Pro" width="200" height="200">
+                    <img src="../../images/xiaomi_buds.jpeg" alt="Xiaomi Earbuds 3 Pro" width="200" height="200">
                     <p>200837</p>
                     <p>Rating:
                         <span class="fa fa-star checked"></span>
