--- a/Exercise2/html/product-categories.html
+++ b/Exercise2/html/product-categories.html
@@ -41,7 +41,7 @@
             <div class="product-categories-div">
                 <div class="SmartphonesTablets">
                     <h1>Smartphones & Tablets</h1>
-                    <img src="images/smartphones.png" alt="Smartphones and Tablets" width="350" height="250">
+                    <img src="../../images/smartphones.png" alt="Smartphones and Tablets" width="350" height="250">
                     <nav id="Smartphones-Tablets">
                         <ul>
                             <li><a href="smartphones.html">Smartphones</a></li>
@@ -55,7 +55,7 @@
 
                 <div class="PCPeripherals">
                     <h1>PCs & Peripherals</h1>
-                    <img src="images/pc.png" alt="PCs and Peripherals" width="350" height="250">
+                    <img src="../../images/pc.png" alt="PCs and Peripherals" width="350" height="250">
                     <nav id="PCs-Peripherals">
                         <ul>
                             <li>PCs</li>
@@ -69,7 +69,7 @@
 
                 <div class="Imaging">
                     <h1>Imaging</h1>
-                    <img src="images/imaging.jpg" alt="Imaging" width="350" height="250"> 
+                    <img src="../../images/imaging.jpg" alt="Imaging" width="350" height="250"> 
                     <nav id="Imaging">
                         <ul>
                             <li>Drones</li>
@@ -83,7 +83,7 @@
 
                 <div class="ImageSound">
                     <h1>Image & Sound</h1>
-                    <img src="images/tv.jpeg" alt="TVs" width="350" height="250">
+                    <img src="../../images/tv.jpeg" alt="TVs" width="350" height="250">
                     <nav id="TVs">
                         <ul>
                             <li>TVs</li>
@@ -96,7 +96,7 @@
 
                 <div class="HomeDevices">
                     <h1>Home Devices</h1>
-                    <img src="images/home.png" alt="Home Devices" width="350" height="250">
+                    <img src="../../images/home.png" alt="Home Devices" width="350" height="250">
                     <nav id="Home-Devices">
                         <ul>
                             <li>Air Conditions</li>
