--- a/Exercise2/html/about-us.html
+++ b/Exercise2/html/about-us.html
@@ -26,7 +26,7 @@
                 <h2 id="about-us">About Us</h2>
                 <article id="dimitrisEvangelou" class="bio-individual">
                     <h3>Dimitris Evangelou</h3>
-                    <img src="images/profile.jpg" alt="Dimitris" width="200" height="200">
+                    <img src="../../images/profile.jpg" alt="Dimitris" width="200" height="200">
                     <p class="cvs" > Dimitris attends <a href="https://www.aueb.gr/" target="blank"> <abbr title="Athens University of Economics and Business">AUEB</abbr></a>
                         as an undergraduate college student in the department of Computer Science. He is specialized in data 
                         management and configuration while working as a Technical Consultant. 
@@ -34,11 +34,11 @@
                     <address>
                         <ul>
                             <li>
-                                <img src="images/mail_logo.png" alt="Profile Logo" width="20" height="20">
+                                <img src="../../images/mail_logo.png" alt="Profile Logo" width="20" height="20">
                                 <a href="mailto:p3180053@aueb.gr"> p3180053@aueb.gr</a>
                             </li>
                             <li>
-                                <img src="images/GitHub-Mark.png" alt="GitHub Logo" width="20" height="20">
+                                <img src="../../images/GitHub-Mark.png" alt="GitHub Logo" width="20" height="20">
                                 <a href="https://github.com/dimevangelou" target="blank">https://github.com/dimevangelou</a>
                             </li>
                         </ul>
@@ -47,22 +47,22 @@
 
                 <article id="thanasKouro" class="bio-individual">
                     <h3>Thanas Kouro</h3>
-                    <img src="images/thanoskrs.jpg" alt="Thanos" width="200" height="200">
+                    <img src="../../images/thanoskrs.jpg" alt="Thanos" width="200" height="200">
                     <p>Thanas is an undergraduate student of the <abbr title="Computer Science">CS</abbr> department of <a href="https://www.aueb.gr/" target="blank"> <abbr title="Athens University of Economics and Business">AUEB</abbr></a>. 
                         He is specialized in the fields of Software Engineering and Machine Learning and he is currently working as a Java Software Engineer.
                     </p>
                     <address>
                         <ul>
                             <li>
-                                <img src="images/mail_logo.png" alt="Mail Logo" width="20" height="20">
+                                <img src="../../images/mail_logo.png" alt="Mail Logo" width="20" height="20">
                                 <a href="mailto:p3170078@aueb.gr">p3170078@aueb.gr</a>
                             </li>
                             <li>
-                                <img src="images/linkedin_logo.png" alt="LinkedIn Logo" width="20" height="20">
+                                <img src="../../images/linkedin_logo.png" alt="LinkedIn Logo" width="20" height="20">
                                 <a href="https://www.linkedin.com/in/thanos-kouros-787a75209/" target="blank">https://www.linkedin.com/in/thanos-kouros-787a75209/</a>
                             </li>
                             <li>
-                                <img src="images/GitHub-Mark.png" alt="GitHub Logo" width="20" height="20">
+                                <img src="../../images/GitHub-Mark.png" alt="GitHub Logo" width="20" height="20">
                                 <a href="https://github.com/thanoskrs" target="blank">https://github.com/thanoskrs</a>
                             </li>
                         </ul>
