--- a/Exercise2/html/galaxy-buds-pro.html
+++ b/Exercise2/html/galaxy-buds-pro.html
@@ -20,7 +20,7 @@
         
         <main>
             <h1 class="product-name">Samsung Galaxy Buds Pro</h1>
-            <img class="product-img" src="images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="400" height="400">
+            <img class="product-img" src="../../images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="400" height="400">
             <section class="product-info">
                 <h2 id="price"><b>€119.00</b></h2>
                 <h3 id="sku">SKU: 321086</h3>
@@ -55,7 +55,7 @@
     
                 <article class="component-description">
                     <h4>SOUND</h4>
-                    <img src ="images/buds_pro2.png" alt="Buds Pro Image" width="500" height="300">
+                    <img src ="../../images/buds_pro2.png" alt="Buds Pro Image" width="500" height="300">
                     <pre><b>
                         Your favorite music. 
                         Our take on it.</b></pre>
@@ -66,7 +66,7 @@
 
                 <article class="component-description">
                     <h4>MICROPHONE</h4>
-                    <img src="images/buds_pro.png" alt="buds_pro" width="500" height="300">
+                    <img src="../../images/buds_pro.png" alt="buds_pro" width="500" height="300">
                     <pre><b>
                         Talk anywere 
                         talk no matter
@@ -78,7 +78,7 @@
 
                 <article class="component-description">
                   <h4>COMFORT</h4>
-                  <img src="images/buds_pro3.jpg" alt="buds_pro" width="500" height="300">
+                  <img src="../../images/buds_pro3.jpg" alt="buds_pro" width="500" height="300">
                   <pre><b>
                         The first
                         Galaxy Buds with 
@@ -89,7 +89,7 @@
 
                 <article class="component-description">
                     <h4>BATTERY</h4>
-                    <img src="images/buds_pro2.png" alt="buds_pro" width="500" height="300">
+                    <img src="../../images/buds_pro2.png" alt="buds_pro" width="500" height="300">
                     <pre><b>
                         Go all day and
                         supercharge your 
