--- a/Exercise2/html/s22-ultra.html
+++ b/Exercise2/html/s22-ultra.html
@@ -19,7 +19,7 @@
         
         <main>
             <h1 class="product-name">Samsung Galaxy S22 Ultra 128 GB</h1>
-            <img class="product-img" src="images/s22_ultra.jpeg" alt="S22 Ultra" width="400" height="400">
+            <img class="product-img" src="../../images/s22_ultra.jpeg" alt="S22 Ultra" width="400" height="400">
             <section class="product-info">
                 <h2 id="price"><s>€1,299.00</s> <b>€1,199.00</b></h2>
                 <h3 id="sku">SKU: 256458</h3>
@@ -55,7 +55,7 @@
 
                 <article class="component-description">
                     <h4>SCREEN</h4>
-                    <img src="images/s22-ultra-wallpaper.png" alt="s22 ultra wallpaper" width="500" height="300">
+                    <img src="../../images/s22-ultra-wallpaper.png" alt="s22 ultra wallpaper" width="500" height="300">
                     <pre><b>
                         Your favorite content. 
                         Our brightest screen.</b></pre>
@@ -65,7 +65,7 @@
 
                 <article class="component-description">
                     <h4>NIGHTOGRAPHY</h4>
-                    <img src="images/s22-ultra-nightography.jpg" alt="s22 ultra Nightography" width="500" height="300">
+                    <img src="../../images/s22-ultra-nightography.jpg" alt="s22 ultra Nightography" width="500" height="300">
                     <pre><b>
                         Good light is 
                         now any light 
@@ -77,7 +77,7 @@
 
                 <article class="component-description">
                     <h4>S-PEN</h4>
-                    <img src="images/s22-ultra-spen.jpg" alt="s22 ultra s pen" width="500" height="300">
+                    <img src="../../images/s22-ultra-spen.jpg" alt="s22 ultra s pen" width="500" height="300">
                     <pre><b>
                         The first
                         Galaxy S with 
@@ -88,7 +88,7 @@
 
                 <article class="component-description">
                     <h4>BATTERY</h4>
-                    <img src="images/s22-ultra-battery.jpg" alt="s22 ultra battery" width="500" height="300">
+                    <img src="../../images/s22-ultra-battery.jpg" alt="s22 ultra battery" width="500" height="300">
                     <pre><b>
                         Go all day and
                         supercharge your 
