Modify Grid/Flex layouts

--- a/Exercise3/html/about-us.html
+++ b/Exercise3/html/about-us.html
@@ -22,8 +22,7 @@
                 college students in Athens University of Economics and Buisness.
             </p>  
     
-            <section class="bio">
-                <h2 id="about-us">About Us</h2>
+            <article class="bio">
                 <article id="dimitrisEvangelou" class="bio-individual">
                     <h3>Dimitris Evangelou</h3>
                     <img src="../../images/profile.jpg" alt="Dimitris" width="200" height="200">
