--- a/Exercise3/html/contact-us.html
+++ b/Exercise3/html/contact-us.html
@@ -110,8 +110,10 @@
                         </li>
                     </ul>
                 </fieldset>
-                <input type="reset" id="contact_reset" name="reset" class="button" value="Reset">
-                <input type="submit" id="contact_submit" name="submit" class="button" value="Submit">
+                <div> 
+                    <input type="reset" id="contact_reset" name="reset" class="button" value="Reset">
+                    <input type="submit" id="contact_submit" name="submit" class="button" value="Submit">
+                </div>
             </form>
         </main>
         <footer>
