exer 3 and font face

--- a/Exercise3/html/contact-us.html
+++ b/Exercise3/html/contact-us.html
@@ -17,11 +17,10 @@
         </header> 
 
         <main>
-            <div class="center">
-                <p>For technical support or any issue, please fill and submit the form below and our customer 
+                <p class="warning">For technical support or any issue, please fill and submit the form below and our customer 
                     service will contact you as soon as possible!
                 </p>
-            </div>
+
             <form id="contact-form">
                 <fieldset id="personal-info" class="field_set">
                     <legend>Personal Info</legend>
