--- a/Exercise3/html/index.html
+++ b/Exercise3/html/index.html
@@ -16,8 +16,8 @@
             <h1><a href="index.html">TechStuff</a></h1>
         </header>
         
-        <main>
-            <p class="main_index">Welcome to our new website. Here, you can find the newest technological products and home devices
+        <main class="main_index">
+            <p class="index_paragr">Welcome to our new website. Here, you can find the newest technological products and home devices
                 at the best prices on the market! You can choose from a variety of Smartphones and Tablets, PCs 
                 or Laptops, TVs, Home Devices and more..!
             </p>
