--- a/Exercise3/html/product-categories.html
+++ b/Exercise3/html/product-categories.html
@@ -42,9 +42,9 @@
                     </ul>
                 </div>
 
-                <div class="Imaging category">
-                    <h1>Imaging</h1>
-                    <img src="../../images/imaging.jpg" alt="Imaging" width="350" height="250"> 
+                <div class="Photography category">
+                    <h1>Photography</h1>
+                    <img src="../../images/imaging.jpg" alt="Photography" width="350" height="250"> 
                     <ul>
                         <li>Drones</li>
                         <li>DSLR</li>
