--- a/Exercise3/html/about-us.html
+++ b/Exercise3/html/about-us.html
@@ -15,9 +15,9 @@
             <h1><a href="index.html">TechStuff</a></h1>
         </header> 
        
-        <main>
+        <main class="about-us_main">
             
-            <p>Founded in 2022 and based in Greece. TechStuff is a site to make your
+            <p class="info">Founded in 2022 and based in Greece. TechStuff is a site to make your
                 everyday tech shopping easier. Our team consists of two members who are both 
                 college students in Athens University of Economics and Buisness.
             </p>  
@@ -45,7 +45,7 @@
                 </article>
 
                 <article id="thanasKouro" class="bio-individual">
-                    <h3>Thanas Kouro</h3>
+                    <h3>Thanos Kouros</h3>
                     <img src="../../images/thanoskrs.jpg" alt="Thanos" width="200" height="200">
                     <p>Thanas is an undergraduate student of the <abbr title="Computer Science">CS</abbr> department of <a href="https://www.aueb.gr/" target="blank"> <abbr title="Athens University of Economics and Business">AUEB</abbr></a>. 
                         He is specialized in the fields of Software Engineering and Machine Learning and he is currently working as a Java Software Engineer.
