--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="Exercise3/html/index.html">Exercise 3</a>
             </li>
+            <li>
+                <a href="Exercise4/html/index.html">Exercise 3</a>
+            </li>
         </ul>
 
     </body>
