--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <meta name="description" content="Technological products">
-        <meta name="author" content="Thanas Kouro">
+        <meta name="author" content="Dimitris Evangelou, Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
