--- a/Exercise3/html/smartphones.html
+++ b/Exercise3/html/smartphones.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <meta name="description" content="Technological products">
-        <meta name="author" content="Thanas Kouro">
+        <meta name="author" content="Dimitris Evangelou, Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
