--- a/Exercise5/html/product-categories.html
+++ b/Exercise5/html/product-categories.html
@@ -5,7 +5,7 @@
 
         <meta charset="UTF-8">
         <meta name="description" content="Technological products">
-        <meta name="author" content="Thanas Kouro,Dimitris Evangelou">
+        <meta name="author" content="Dimitris Evangelou, Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
