--- a/Exercise1/s22-ultra.html
+++ b/Exercise1/s22-ultra.html
@@ -199,7 +199,7 @@
             <article class="review">
                 <h3>I love my Samsung Galaxy S22 Ultra</h3>
                 <p>Rating: 5/5</p>
-                <p>TI know that it's a lot of money, but I don't upgrade every time a new phone comes out. 
+                <p>I know that it's a lot of money, but I don't upgrade every time a new phone comes out. 
                     I'm really sad that there is no slot for an SD card because I take thousands of photos. 
                     So far everything is going well. Ilike the pen, it's the first time I have had one on my phone. 
                     The camera is nice, it has some really great editing features like shadow and glare removal. 
@@ -254,8 +254,6 @@
                     an adapter for the headset. I am going to look for the another phone that allows headphones and SD card.
                 </p>
             </article>
-        
-            <a href="https://www.amazon.com/product-reviews/B09MVZH5RB/ref=cm_cr_arp_d_paging_btm_next_2?ie=UTF8&filterByStar=four_star&reviewerType=all_reviews&pageNumber=2#reviews-filter-bar" target="_blank">More Reviews</a>
         </section>
         
     </body>
