Update password details

--- a/Exercise5/html/register.html
+++ b/Exercise5/html/register.html
@@ -112,7 +112,7 @@
                     </ul>
                     <details>
                         <summary class="details_header" >Help</summary>
-                        <p class="details">Input your account information. Password must be atleast 8 character</p>
+                        <p class="details">Input your account information. Password should be at least 8 characters, should contain at least one number, one special character and one Upper Case letter.</p>
                     </details>
                 </fieldset>
 
