--- a/WikiShop/public/index.html
+++ b/WikiShop/public/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <title>WikiShop</title>
-        <link href="../images/Wikipedia-logo-v2.svg.png" rel="shortcut icon" type="image/png"/>
+        <link href="images/Wikipedia-logo-v2.svg.png" rel="shortcut icon" type="image/png"/>
 
         <meta charset="UTF-8">
 
         <meta name="author" content="Dimitris Evangelou, Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
         <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-        <script type="text/javascript" src="../js/categories_script.js"></script>
+        <script type="text/javascript" src="js/categories_script.js"></script>
 
         <script id="categories-template" type="text/x-handlebars-template">
             {{#each array}}
