Add error message when cart is empty

--- a/WikiShop/public/cart.html
+++ b/WikiShop/public/cart.html
@@ -33,7 +33,7 @@
             </thead>
             <tfoot>
                 <tr>
-                    <td> <b>Total Cost</b> </td>
+                    <td><b>Total Cost</b></td>
                     <td><b>{{array.totalCartItems}}</b></td>
                     <td><b>{{array.totalCost}}</b></td>
                 </tr>
@@ -49,7 +49,8 @@
 
         <main>
             <section id="cart">
-			    <h2>Cart</h2>
+			    <h1>Cart</h1>
+                <p id="cart-error"></p>
                 <div id="loader"></div>
 			    <table id="cart-table" class="table" ></table>
 		    </section>
