--- a/WikiShop/public/category.html
+++ b/WikiShop/public/category.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" type="text/css" href="css/style.css"> 
 
         <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.js"></script>
         <script type="text/javascript" src="js/products_script.js"></script>
         <script type="text/javascript" src="js/LoginService.js"></script>
         <script type="text/javascript" src="js/CartItemService.js"></script>
@@ -49,12 +48,10 @@
                     <img id="cart-img" src="images/cart.png">
                     <p id="totalCartItems"></p>
                 </a>
-                
             </section>
             <!-- A button to open the popup form -->
-            <button id="open-button" onclick="openForm()">Log in</button>
+            <button id="open-button" onclick="openForm()">Sign in</button>
             <button id="log-out" onclick="logOut()">Log out</button>
-
             <!-- The form -->
             <div class="form-popup" id="login-div">
                 <form action="#" class="form-container" id="login-form">
