--- a/WikiShop/public/cart.html
+++ b/WikiShop/public/cart.html
@@ -42,7 +42,7 @@
                     <td><b>{{array.totalCost}}</b></td>
                 </tr>
                 <tr>
-                    <td colspan="3"><button id="clear-cart" onclick="clearCart()">Clear Cart</button></td>
+                    <td colspan="3"><button class="btn" id="clear-cart" onclick="clearCart()">Clear Cart</button></td>
                 </tr>
             </tfoot>
         </script>
@@ -60,7 +60,6 @@
                 <p id="cart-error"></p>
                 <div id="loader"></div>
 			    <table id="cart-table" class="table" ></table>
-                
 		    </section>
         </main>
 
