--- a/WikiShop/public/index.html
+++ b/WikiShop/public/index.html
@@ -30,7 +30,10 @@
         </header>
 
         <main>
-            <div id = "categories"> </div>
+            <section>
+                <div id="loader"></div>
+                <div id = "categories"> </div>
+            </section>
         </main>
 
         <footer>
