--- a/WikiShop/public/category.html
+++ b/WikiShop/public/category.html
@@ -44,7 +44,7 @@
 
         <main>
             <div id="cart-container">
-                <a href="cart.html">
+                <a href="cart.html" id="go-to-cart">
                     <img id="cart-img" src="images/cart.jpg">
                 </a>
                 <i class="fas fa-shopping-cart"></i>
@@ -71,10 +71,29 @@
 
                     <label for="psw"><b>Password</b></label>
                     <input type="password" id="password" placeholder="Enter Password" name="psw" required>
-
+                    
+                    <p id="sign-up-text">Not a member? <a href="javascript:openSignUp();"><b>Sign up</b></a></p>
                     <p id="invalid_data"></p>
 
                     <button type="button" class="btn" onclick="sendData()" class="btn">Login</button>
+                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                </form>
+            </div>
+            <div class="form-popup" id="sign-up-div">
+                <form action="#" class="form-container" id="sign-up-form">
+                    <h1>Sign Up</h1>
+                    <label for="username"><b>Username</b></label>
+                    <input type="text" id="sign-up-username" placeholder="Enter Username" name="username" required>
+
+                    <label for="psw"><b>Password</b></label>
+                    <input type="password" id="sign-up-password" placeholder="Enter Password" name="psw" required>
+
+                    <label for="psw"><b>Confirm Password</b></label>
+                    <input type="password" id="confirm-password" placeholder="Enter Password" name="confirm-psw" required>
+
+                    <p id="user-exists"></p>
+
+                    <button type="button" class="btn" onclick="signUp()" class="btn">Sign Up</button>
                     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
                 </form>
             </div>
