Rename some tag ids

--- a/WikiShop/public/category.html
+++ b/WikiShop/public/category.html
@@ -91,7 +91,7 @@
                     <label for="psw"><b>Confirm Password</b></label>
                     <input type="password" id="confirm-password" placeholder="Enter Password" name="confirm-psw" required>
 
-                    <p id="user-exists"></p>
+                    <p id="sign-up-error"></p>
 
                     <button type="button" class="btn" onclick="signUp()" class="btn">Sign Up</button>
                     <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
