--- a/WikiShop/public/category.html
+++ b/WikiShop/public/category.html
@@ -100,7 +100,7 @@
         </main>
 
         <footer>
-            <p><a href="about-us.html">About us</a></p>
+            <p>WikiShop 2023</p>
         </footer>
     </body>
 </html>
