--- a/WikiShop/public/index.html
+++ b/WikiShop/public/index.html
@@ -37,7 +37,7 @@
         </main>
 
         <footer>
-            <p><a href="about-us.html">About us</a></p>
+            <p>WikiShop 2023</p>
         </footer>
     </body>
 </html>
